<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.WelcomeScreen_Fragment"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_f_string"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/welcome_s_string"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/explore_string"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:src="@drawable/welcome_png"
            android:layout_centerInParent="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="40dp">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/register_btn_back"
                android:text="@string/login_string"
                android:textStyle="normal"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:elevation="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>

            <TextView
                android:id="@+id/sign_up_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/singup_string"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="5dp"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </RelativeLayout>
</layout>