<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.Address_Fragment"
        android:background="@color/white">

        <RelativeLayout
            android:id="@+id/rel_bar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:padding="5dp"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/ic_baseline_arrow_right_alt_24"
                android:rotation="180"
                app:tint="@color/main_txt_color"
                android:layout_centerVertical="true" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/txt_f"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rel_bar"
            android:padding="5dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address_txt"
                android:textSize="28sp"
                android:textColor="@color/main_txt_color"
                android:textStyle="normal" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/txt_f"
            android:visibility="gone">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rec_choose_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_alignParentBottom="true"
                android:padding="5dp">

                <TextView
                    android:id="@+id/add_address_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:text="@string/add_address_txt"
                    android:layout_gravity="center_horizontal"
                    android:textSize="20sp"
                    android:textColor="#667EEA" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="?actionBarSize"
                    android:background="@drawable/register_btn_back"
                    android:text="@string/continue_address_txt"
                    android:textSize="20sp"
                    android:textColor="@color/white"
                    android:textAllCaps="false"
                    android:layout_margin="10dp" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/txt_f">

            <LinearLayout
                android:id="@+id/lin_address_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name_text"
                        android:textSize="18sp"
                        android:textColor="#919191" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:text="Mahmoud Bashir Mahmoud"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address_line_text"
                        android:textSize="18sp"
                        android:textColor="#919191" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:text="Nasr City"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city_text"
                        android:textSize="18sp"
                        android:textColor="#919191" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:text="Cairo"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:layout_marginTop="15dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/portal_txt"
                        android:textSize="18sp"
                        android:textColor="#919191" />

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:text="1234"
                        android:maxLength="4"
                        android:textSize="20sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginBottom="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/phone_no_text"
                        android:textSize="18sp"
                        android:textColor="#919191" />

                    <EditText
                        android:inputType="phone"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginTop="5dp"
                        android:text="+201xxxxxxxxx"
                        android:textSize="20sp" />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="address name"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="5dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="house number"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="5dp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Road name:no22"
                    android:textSize="22sp"
                    android:textColor="@color/black"
                    android:layout_marginBottom="5dp"
                    />

            </LinearLayout>

            <TextView
                android:id="@+id/btn_change_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="Change Address"
                android:textColor="#667EEA"
                android:textSize="21sp"
                android:layout_above="@+id/btn_continue_add_address"
                android:layout_marginBottom="70dp"/>

            <Button
                android:id="@+id/btn_continue_add_address"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"
                android:text="@string/continue_address_txt"
                android:textAllCaps="false"
                android:textSize="20sp"
                android:textColor="@color/white"
                android:background="@drawable/register_btn_back"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="15dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp" />
        </RelativeLayout>

    </RelativeLayout>
</layout>