<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="isLogin"
            type="Boolean" />
        <import type="android.view.View"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".fragments.Registeration_Fragment">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:id="@+id/lin_bar">

            <ImageView
                android:id="@+id/btn_back"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:src="@drawable/ic_baseline_arrow_right_alt_24"
                android:rotation="180"
                app:tint="@color/arrow_color" />

            <TextView
                android:id="@+id/txt_regist_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_string"
                android:textSize="28sp"
                android:textColor="@color/black"
                android:layout_marginTop="15dp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_inputs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_below="@+id/lin_bar"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="25dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="Name"
                android:textColor="@color/black"
                android:layout_marginBottom="10dp"
                android:inputType="textPersonName"
                android:visibility="@{isLogin?View.GONE:View.VISIBLE , default = gone}" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="Email"
                android:layout_marginBottom="10dp"
                android:inputType="textEmailAddress"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_pass"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="Password"
                android:inputType="textPassword"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="60dp"
            android:layout_below="@+id/lin_inputs">

            <Button
                android:id="@+id/login_btn"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/register_btn_back"
                android:text="@string/login_string"
                android:textStyle="normal"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:textAllCaps="false"
                android:elevation="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/txt_regist_q"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/regist_q_signup"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/to_sign_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/singup_string"
                    android:textSize="18sp"
                    android:textColor="@color/black"
                    android:layout_marginTop="5dp"
                    android:layout_gravity="center_horizontal" />
            </LinearLayout>

        </LinearLayout>

            </RelativeLayout>
        </ScrollView>
    </RelativeLayout>
</layout>